# viennamesh-dev

./: CMakeLists.txt  CTestConfig.cmake  LICENSE  README  README.md  TODO  ViennaMesh.kdev4  build.sh  build_all.sh  changelog  clean.sh  clean_all.sh  main.cpp  notes.cpp  notes.xml  process.sh  wishlist.txt
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  build.sh
doc/logo/: logo_with_text_v1.eps
doc/manual/: Makefile  algorithms.dox  algorithms_external.dox  algorithms_io.dox  algorithms_viennagrid.dox  api.dox  availabletools.tex  build.tex  contributors.tex  cover.tex  features.dox  installation.dox  installation.tex  introduction.dox  introduction.tex  license.tex  main.dox  parameters.dox  pyviennamesh.dox  results.tex  results.tex.bak  tools-vmesh.dox  tools.dox  types.dox  usage.tex  usage.tex.bak  viennamesh.bib  viennamesh.tex
examples/: CMakeLists.txt
examples/data/: big_and_small_cube.poly  box10x10.vtu  box10x10x10.vtu  box200x200.vtu  box20x20.vtu  box20x20x20.vtu  box50x50.vtu  box5x5.vtu  box5x5x5.vtu  cgal_cube.mesh  cgal_simple_bad.mesh  cgal_simple_good.mesh  cross33-pot  cross33-pot.fld  cross33-pot.vtu  cross33-temp.fld  cross33-temp.vtu  cross33.fem  cross33.lay  cross_2d_brep.vtu  cross_with_quadrilateral_2d_brep.vtu  cube.poly  cube_triangular_hull.vtu  cube_using_lines.poly  cube_with_cube_hole.poly  cube_with_tunnel.poly  cubeception.poly  eight_cubes.poly  elephant.vtu  half-trigate_0.vtu  half-trigate_1.vtu  half-trigate_2.vtu  half-trigate_3.vtu  half-trigate_4.vtu  half-trigate_5.vtu  half-trigate_6.vtu  half-trigate_7.vtu  half-trigate_8.vtu  half-trigate_main.pvd  mixed_mesh.vtu  (+11 more)
examples/pipelines/: cgal_mesh_simplification.xml  convert.xml  extract_plc_geometry.xml  mesh_statistics.xml  metis.xml  netgen_mesh_csg.xml  oriented_hull.xml  poisson_test1.xml  poisson_test2.xml  quantities.xml  simplexify.xml  simplify.xml  sizing_function_triangle.xml  symmetry_3d.xml  tetgen_mesh.xml  tetgen_mesh_hyperclip.xml  triangle2d.xml  triangle_make_hull.xml  triangle_refine_make_hull.xml
examples/src/: aspect_ratio.cpp  boost_accumulator.cpp  cavity_remesh.cpp  cgal_plc_2d_direct.cpp  cgal_plc_2d_viennamesh.cpp  cgal_plc_3d_direct.cpp  cgal_plc_3d_viennamesh.cpp  cgal_tet_viennamesh.cpp  example1.cpp  example10.cpp  example11.cpp  example2.cpp  example2a.cpp  example3.cpp  example3a.cpp  example4.cpp  example4a.cpp  example5.cpp  example6.cpp  example7.cpp  example7a.cpp  example7b.cpp  example8.cpp  example8a.cpp  example9.cpp  extract_plc.cpp  mesh_conversion.cpp  plc2tet_cgal.cpp  plc2tet_netgen.cpp  tetgen_viennamesh.cpp
examples/tutorial/: CMakeLists.txt  aspect_ratio.cpp  benchmark_cgal.cpp  benchmark_tetgen.cpp  benchmark_triangle.cpp  bnd_to_mphtxt.cpp  bnd_to_vtk.cpp  boost_accumulator.cpp  cavity_remesh.cpp  cgal_plc_2d_direct.cpp  cgal_plc_2d_viennamesh.cpp  cgal_plc_3d_direct.cpp  cgal_plc_3d_viennamesh.cpp  cgal_tet_viennamesh.cpp  cgal_tetrahedron_mesher.cpp  complete_remesh.cpp  dynamic_mesh.cpp  extract_hull.cpp  extract_hull_example.cpp  extract_hull_holes.cpp  extract_plc.cpp  generate_tetgen.cpp  gts_deva_reader.cpp  inplace.cpp  interface_information.cpp  line_cut_example.cpp  make_mosfet.cpp  mesh_lado.cpp  mesh_yannick.cpp  mesher1d.cpp  netgen_csg_mesher.cpp  nld_coarsen_hull.cpp  nld_extract_hull.cpp  nld_mesh_quad_hull.cpp  plc2tet_cgal.cpp  plc2tet_netgen.cpp  reference_parameter.cpp  seed_point_locator_1d.cpp  seed_point_locator_2d.cpp  seed_point_locator_3d.cpp  (+11 more)
examples/tutorials/: CMakeLists.txt  cgal_automatic_mesh_simplification.cpp  cgal_mesh_simplification.cpp  color_chess.cpp  color_refinement.cpp  data.cpp  extract_boundary.cpp  file_read_write.cpp  mesh_information.cpp  mesh_statistics.cpp  pragmatic_metis_partitioner.cpp  pragmatic_metis_partitioning.cpp  pragmatic_refine_multi_region_mesh.cpp  pragmatic_refiner.cpp  pragmatic_smoother.cpp  pragmatic_swapper.cpp  symmetry_2d.cpp  symmetry_3d.cpp  tetgen_mesher.cpp  triangle_hull_mesher.cpp  triangle_mesher.cpp  vtk_coarsening.cpp  zoltan.cpp
plugins/: CMakeLists.txt  viennamesh_plugin.cpp  viennamesh_plugin.hpp
plugins/CGAL/: CMakeLists.txt  cgal_automatic_mesh_simplification.cpp  cgal_automatic_mesh_simplification.hpp  cgal_mesh.cpp  cgal_mesh.hpp  cgal_mesh_simplification.cpp  cgal_mesh_simplification.hpp  cgal_simplify_mesh.cpp  cgal_simplify_mesh.hpp  plugin.cpp
plugins/VTK/: CMakeLists.txt  plugin.cpp  vtk_decimate_pro.cpp  vtk_decimate_pro.hpp  vtk_merge_points.cpp  vtk_merge_points.hpp  vtk_mesh.cpp  vtk_mesh.hpp  vtk_mesh_quality.cpp  vtk_mesh_quality.hpp  vtk_quadric_clustering.cpp  vtk_quadric_clustering.hpp  vtk_quadric_decimation.cpp  vtk_quadric_decimation.hpp  vtk_simplify_mesh.cpp  vtk_simplify_mesh.hpp  vtk_ug_mesh.cpp  vtk_ug_mesh.hpp  vtp_mesh.cpp  vtp_mesh.hpp
plugins/color_based_refinement/: CMakeLists.txt  color_refinement.cpp  color_refinement.hpp  consistency_check.cpp  consistency_check.hpp  counter.hpp  mesh_partitions.hpp  outbox.hpp  plugin.cpp  pragmatic_mesh.cpp  pragmatic_mesh.hpp  triangle_interface.c  triangle_interface.h
plugins/io/: CMakeLists.txt  common.cpp  common.hpp  io.cpp  mesh_reader.cpp  mesh_reader.hpp  mesh_writer.cpp  mesh_writer.hpp  plc_reader.cpp  plc_reader.hpp  plc_writer.cpp  plc_writer.hpp  plugin.cpp  sentaurus_tdr_reader.hpp
plugins/mesh_healing/: CMakeLists.txt  check_hull_topology.cpp  check_hull_topology.hpp  cube_resample.cpp  cube_resample.hpp  merge_close_points.cpp  plugin.cpp  (+7 more)
pyviennamesh/: CMakeLists.txt  pyviennamesh.i
src/: CMakeLists.txt  approach.cpp  apptest.cpp  area_triangle.cpp  bnd2hin.h  checker.cpp  dev.cpp  external.cpp  generate.cpp  generator.cpp  hull.cpp  hull_adapt.cpp  hull_checker.cpp  mesh.cpp  netgen.cpp  netgen.cpp~  playground.cpp  playground3.cpp  tetgen.cpp  vgmodeler.cpp  vgmodeler.cpp~  viennamesh.cpp  viennamesh.cpp~  vmesh.cpp  vol_adapt_netgen.cpp  vol_adapt_tetgen.cpp  vol_netgen.cpp  vol_tetgen.cpp
tests/: CMakeLists.txt  CMakeLists.txt~  build.sh  run_regression.sh  test_fraunhofer.sh  tests.kdev4  triangle.cpp  triangle.cpp~
tools/: CMakeLists.txt
(+899 files in other folders)
