
set(VIENNAMESH_PLUGIN_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR})
set(VIENNAMESH_PLUGIN_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/viennamesh_plugin.cpp)

FUNCTION(VIENNAMESH_ADD_PLUGIN)

  list(GET ARGV 0 PLUGIN_NAME)
  message(STATUS "ADDED PLUGIN: ${PLUGIN_NAME}")
  list(REMOVE_AT ARGV 0)
  set(PLUGIN_SOURCES ${ARGV} ${VIENNAMESH_PLUGIN_SOURCES})
  message(STATUS "  SOURCES: ${PLUGIN_SOURCES}")

  include_directories(${VIENNAMESH_PLUGIN_INCLUDES})

  add_library(${PLUGIN_NAME} MODULE ${PLUGIN_SOURCES})
  set_target_properties(${PLUGIN_NAME} PROPERTIES PREFIX "")

  add_custom_command(TARGET ${PLUGIN_NAME} POST_BUILD COMMAND rm -f ${CMAKE_CURRENT_BINARY_DIR}/../${PLUGIN_NAME}.so)
  add_custom_command(TARGET ${PLUGIN_NAME} POST_BUILD COMMAND ln -s ${CMAKE_CURRENT_BINARY_DIR}/${PLUGIN_NAME}.so ${CMAKE_CURRENT_BINARY_DIR}/..)

ENDFUNCTION(VIENNAMESH_ADD_PLUGIN)


add_subdirectory(io)
