FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

get_filename_component(PYTHON_LIBRARY_DIR ${PYTHON_LIBRARIES} PATH)
LINK_DIRECTORIES(${PYTHON_LIBRARY_DIR})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(pyviennamesh.i PROPERTIES CPLUSPLUS ON)
SWIG_ADD_MODULE(pyviennamesh python pyviennamesh.i)

SWIG_LINK_LIBRARIES(pyviennamesh viennamesh)
