add_executable(data data.cpp)
target_link_libraries(data viennameshpp)

add_executable(file_read_write file_read_write.cpp)
target_link_libraries(file_read_write viennameshpp)

add_executable(triangle_mesher triangle_mesher.cpp)
target_link_libraries(triangle_mesher viennameshpp)

add_executable(triangle_hull_mesher triangle_hull_mesher.cpp)
target_link_libraries(triangle_hull_mesher viennameshpp)

add_executable(tetgen_mesher tetgen_mesher.cpp)
target_link_libraries(tetgen_mesher viennameshpp)

add_executable(extract_boundary extract_boundary.cpp)
target_link_libraries(extract_boundary viennameshpp)

add_executable(symmetry_2d symmetry_2d.cpp)
target_link_libraries(symmetry_2d viennameshpp)

add_executable(symmetry_3d symmetry_3d.cpp)
target_link_libraries(symmetry_3d viennameshpp)

add_executable(cgal_mesh_simplification cgal_mesh_simplification)
target_link_libraries(cgal_mesh_simplification viennameshpp)

add_executable(cgal_automatic_mesh_simplification cgal_automatic_mesh_simplification)
target_link_libraries(cgal_automatic_mesh_simplification viennameshpp)

add_executable(mesh_statistics mesh_statistics)
target_link_libraries(mesh_statistics viennameshpp)

add_executable(vtk_coarsening vtk_coarsening.cpp)
target_link_libraries(vtk_coarsening viennameshpp)

add_executable(color_chess color_chess.cpp)
target_link_libraries(color_chess viennameshpp)

add_executable(color_refinement color_refinement.cpp)
target_link_libraries(color_refinement viennameshpp)
